--- a/javascript/基础/6.对象.md
+++ b/javascript/基础/6.对象.md
@@ -40,5 +40,19 @@ console.log("name" in obj);
 /*检查obj中是否有name 属性*/
 ```
 
+## 取值操作不仅仅可以用. 也可以用[ ] 
 
+<font color='orange'>那么什么时候必须使用[ ]形势来调用对象的属性或方法呢</font>
+
+1. 属性名中包含特殊字符: - 空格
+2. 属性名由变量调用，不确定
+
+```js
+let a = {}
+a['content-type']=javascript
+console.log(a['content-type'])
+
+let b='content-type'
+console.log(a[b])
+```
 
