--- a/javascript/基础/9.变量和函数声明.md
+++ b/javascript/基础/9.变量和函数声明.md
@@ -36,7 +36,7 @@ var fun = function(){
 
 ## 有关同名的变量和函数声明
 
-对于<font color='red'>同名的变量声明</font>，Javascript采用的是<font color='orange'>忽略原则</font>，后声明的会被忽略，变量声明和赋值操作可以写在一起，但是只有声明会被提升，提升后变量的值默认为undefined，结果是在赋值操作执行前变量的值必为undefined
+对于<font color='red'>同名的变量声明</font>，Javascript采用的是<font color='orange'>覆盖原则</font>，先前声明的会被覆盖，变量声明和赋值操作可以写在一起，但是只有声明会被提升，提升后变量的值默认为undefined，结果是在赋值操作执行前变量的值必为undefined
 
 对于<font color='red'>同名的函数声明</font>，Javascript采用的是<font color='orange'>覆盖原则</font>，先声明的会被覆盖，因为函数在声明时会指定函数的内容，所以同一作用域下一系列同名函数声明的最终结果是调用时函数的内容和最后一次函数声明相同
 
