--- a/javascript/基础/13.数组.md
+++ b/javascript/基础/13.数组.md
@@ -28,6 +28,16 @@ function slice(){
 }
 ```
 
+用slice复制一个数组
+
+```js
+let item=[1,2,3]
+let itemCopy = []
+itemCopy = item.slice()
+```
+
+
+
 splice() 可以删除数组中的指定元素并添加新的元素,<font color='red'>会影响到数组，并将被删除的元素封装成一个数组返回</font>
 
 splice 粘合，连接
