--- a/CSS/基础/4.CSS选择器.md
+++ b/CSS/基础/4.CSS选择器.md
@@ -1,1 +1,180 @@
 # 交集选择器
+
+```css
+div.red{
+  ...选择复合条件的选择器
+}
+```
+
+# 关系选择器
+
+```css
+子元素选择器 >
+div > span{
+  div 下的子元素span
+}
+后代选择器 空格
+div span{
+  div的后台元素 span
+}
+兄弟选择器 +
+div + span{
+  div 的下一个兄弟元素span
+}
+范围兄弟选择器 ~
+div ~ span{
+  div 后所有的span 元素
+}
+```
+
+# 属性选择器
+
+<font color='red'>盲点</font>
+
+[属性名]选择含有指定属性的元素
+[属性名^=属性值]选择属性值以指定值开头的元素
+[属性名$=属性值]选择属性值以指定值结尾的元素
+[属性名*=属性值]选择属性值中含有某值的元素
+
+```html
+<body>
+   <p title="123">123</p>
+<!--   title属性鼠标移上去有说明-->
+   <p title="123456">456</p>
+   <p title="789123">789</p>
+   <p>101112</p>
+
+</body>
+<style>
+  /*
+    [属性名]选择含有指定属性的元素
+    [属性名^=属性值]选择属性值以指定值开头的元素
+    [属性名$=属性值]选择属性值以指定值结尾的元素
+    [属性名*=属性值]选择属性值中含有某值的元素
+  */
+  p{
+    font-size: 33px;
+    color: green;
+  }
+  p[title$="123"]{
+    color: red;
+  }
+</style>
+```
+
+# 伪类选择器
+
+<font color='red'>伪类：不存在的类，特殊的类</font>
+
+   <font color='orange'>\- 伪类用来描述一个元素的特殊状态</font>
+
+​      比如：第一个子元素、被点击的元素、鼠标移入的元素
+
+   -伪类一般情况下都是使用：开头
+
+​        :first-child 第一个子元素
+
+​        :last-child、
+
+​        :nth-child()选中第n个子元素,特殊值 n、2n、2n+1 分别为全部的、偶数位、奇数位
+
+​         以上伪类是根据所有子元素进行排序的
+
+​         :first-of-type、:last-of-type、:nth-of-type() 
+
+​         以上伪类的功能和上述类似，不同的是他们在同类型元素中进行排序
+
+​         :not() 否定伪类
+
+```html
+<body>
+<!--ul>li*5可以根据css选择器直接生成html代码-->
+<ul>
+  <span>第一个span</span>
+  <li>第一个</li>
+  <li>第二个</li>
+  <li class="abc">第三个</li>
+  <li>第四个</li>
+  <li>第五个</li>
+</ul>
+</body>
+<style>
+  /*ul>li:first-child{*/
+  /*  color: red;*/
+  /*}*/
+  /*ul>li:last-child{*/
+  /*  color: red;*/
+  /*}*/
+  /*ul>li:nth-child(even){*/
+  /*  color: red;*/
+  /*}*/
+  /*ul :first-child {*/
+  /*  color: aqua;*/
+  /*}*/
+  li :not(.abc) {
+    color: blue;
+    font-size: 30px;
+  }
+</style> 
+```
+
+# 伪元素选择器
+
+伪元素：<font color='red'>不存在的元素，特殊的位置</font>
+
+使用::开头
+
+```html	
+<body>
+  <div>Hello World</div>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur enim fuga maxime pariatur sit? Accusantium architecto consequatur consequuntur culpa distinctio doloribus est inventore, minima nobis nostrum numquam odit placeat quam.</p>
+</body>
+<style>
+/*首字母下沉效果*/
+  p::first-letter{
+    font-size: 50px;
+  }
+  p::first-line{
+    background-color: yellow;
+  }
+  /*给选中内容设置样式*/
+  p::selection{
+    background-color: green;
+  }
+  /*before\after必须配合content使用*/
+  div::before{
+    content: "@";
+    color: aqua;
+  }
+  div::after{
+    content: "#";
+    color: chartreuse;
+  }
+</style> 
+```
+
+# 选择器的权重
+
+   当选择器发生冲突时根据不同选择器的有限级进行分配
+
+   内联样式  1000  （写在html里 style=xxxx）
+
+   id选择器   100
+
+   类和伪类选择器 10 （class="xxx"  .xxx）
+
+   元素选择器( div) 1
+
+   通配选择器  （*）0
+
+   继承的样式   没有优先级
+
+<font color='red'> 可以使用！importance使得样式获取到最高优先级</font>
+
+# 伪元素来使用图标字体
+
+找到要设置图标的元素通过before或after选中
+
+在content中设置字体的编码
+
+设置字体的样式
