--- a/node/11.Express.md
+++ b/node/11.Express.md
@@ -30,6 +30,18 @@ app.listen('3000',()=>{
 3. app.listen() 开启端口服务
 4. get监听
 
+### 路由
+
+```js
+const app = express()
+app.get('/login',(req,res)=>{
+  ...
+}).get('/asdf',....)
+  .post('/asdfs',....)
+```
+
+<font color='orange'>路由函数的返回值还是app，可以链式调用</font>
+
 ### 开启静态资源库API
 
 ```js
@@ -37,5 +49,161 @@ app.listen('3000',()=>{
 app.use('/public/',express.static('./public/'))
 ```
 
+当以/public/开头时候，去./public/目录中寻找对应资源
+
+<font color='orange'>其中/public/是给后面路径起的别名也可以起/a/，然后用这个别名来访问</font>
+
+```js
+app.use(express.static('./public/'))
+```
+
+<font color='red'>当省略第一个参数的时候,可以通过省略/public来直接访问./public/目录下的资源</font>
+
+### 使用art-template
+
+1. 安装
+
+```shell
+npm install --save art-template
+npm install --save express-art-template
+```
+
+2. 使用
+
+```js
+var express = require('express')
+var app = express()
+app.engine('html',require('express-art-template'))
+app.get('/',(res,req)=>{
+  res.render('index.html',{
+    user:'张三'
+  })
+})
+```
+
+(用这个插件也不用读文件了，直接render就行)
+
+3. 配置说明
+
+```js
+app.engine('html',require('express-art-template'))
+```
+
+配置文件后缀，该后缀的才会使用art-template模版进行渲染
+
+```js
+app.set('views',render函数的默认路径)//第一个参数必须是 views
+```
+
+不进行这项配置，<font color='red'>render函数渲染的对象默认是根目录下`views`文件夹下的合法后缀名文件</font>
+
+### 在get和post请求中拿到参数
+
+get 中用req.query拿到
+
+```js
+app.get('/',(req,res)=>{
+  log(req.query)
+})
+```
+
+在Express中没有内置获取post数据的api需要下载中间件插件`body-parser`
+
+安装
+
+```shell
+npm i --save body-parser
+```
+
+配置导入
+
+```js
+var bodyParser = require('body-parser')
+
+app.use(bodyParser.urlencoded({extended:false}))
+app.use(bodyParser.json())
+//配置完成后，路由函数req对象自动加入body属性来存放post数据
+app.post('/',(req,res)=>{
+  log(req.body)
+})
+```
 
 
+
+### 设置错误码500，并发送信息
+
+```js
+res.status(500).send('server error')
+```
+
+
+
+# 修改完代码自动重启
+
+可以使用一个第三方工具 `nodemon` 来帮助频繁重启服务器的问题
+
+首先安装
+
+```shell
+npm install --global nodemon
+```
+
+安装完毕后
+
+```shell
+node app.js
+#使用nodemon
+nodemon app.js
+```
+
+只要使用nodemon启动的服务，则它会监视你文件，如果文件变化则会自动重启
+
+# 路由设计
+
+独立出一个router.js 文件来专门进行路由
+
+- 在router.js文件中加入
+
+```js
+const express = require('express')
+
+const router = express.Router()
+```
+
+
+
+- 设置路由( 可以链式调用)
+
+```js
+router
+  .get('/', (req, res) => {
+    fs.readFile('./db.json', (err, data) => {
+      if (err) {
+        res.statusCode = 500
+      }
+      res.render('index.html',
+        JSON.parse(data)
+      )
+    })
+  })
+  .get('/student/new', (req, res) => {
+    res.render('new.html')
+  })
+```
+
+
+
+- 导出router
+
+```js
+module.exports = router
+```
+
+- 在app.js中导入并使用
+
+```js
+const router = require('./router.js')
+app.use(router)
+```
+
+ 
