--- a/node/3.node文件读写.md
+++ b/node/3.node文件读写.md
@@ -65,3 +65,55 @@ fs.readdir('D:/newdir',function (err, files) {
 })
 ```
 
+# Promise 解决异步文件操作问题
+
+return promise语句，在其中封装异步操作
+
+```js
+module.exports.finALL = function () {
+ return new Promise((resolve, reject) => {
+    fs.readFile(dbPath, (err, data) => {
+      if (err)
+        reject()
+      resolve(data)
+    })
+  }
+  )
+}
+```
+
+```js
+student.finALL().then((data)=>{
+      res.render('index.html',JSON.parse(data))
+    }).catch(()=>{   
+      res.status(500).send('server error')
+    })
+  }
+```
+
+
+
+带参数的
+
+```js
+module.exports.save = function (stu){
+  return new Promise((resolve,reject)=>{
+    fs.readFile(dbPath,(err, data)=>{
+      if(err)
+        reject()
+      let students = JSON.parse(data.toString()).students
+      students.push(stu)
+      let fileData = JSON.stringify({
+        students
+      })
+      fs.writeFile(dbPath,fileData,(err)=>{
+        if(err)
+          reject()
+        resolve('保存成功')
+      })
+      
+    })
+  })
+}
+```
+
