--- a/node/5.在node中使用模板引擎.md
+++ b/node/5.在node中使用模板引擎.md
@@ -16,6 +16,7 @@ npm install art-template --save
 	我的名字叫{{name}}
 	我今年{{age}}岁了
 	我喜欢{{ each hobbies }} {{ $value }} {{ /each }}
+	我的学生{{student.name}}
 </script>
 <script>
 	var ret = template('tpl',{
@@ -25,7 +26,10 @@ npm install art-template --save
       '唱歌',
       '看电影',
       '听歌'
-    ]
+    ]，
+    student:{
+    name:'zhanggsna'
+  }
   })
   log(ret)
 </script>
