2020 9 25 好久没有更新了，加上了面试总结

--- a/javascript/基础/10.this指向.md
+++ b/javascript/基础/10.this指向.md
@@ -12,6 +12,8 @@
 
 5.箭头函数没有自己的this值，<font color='red'>箭头函数中所使用的this来自于函数作用域链</font>。
 
+6.在严格模式下(`'use strict'`)，`this`的值为`undefined`
+
 ## 构造函数
 
 构造函数的执行流程
