--- a/2020 前端面试题详解文档/要点3.md
+++ b/2020 前端面试题详解文档/要点3.md
@@ -213,6 +213,8 @@ POST把提交的数据则放置在是HTTP包的包体中。
 
 4.<font color='red'>get是幂等的，多次刷新只请求一次，post是非幂等的，多次刷新请求多次</font>
 
+5.get请求只发送一次，post先发请求再发包体，本质是两次请求
+
 # 手机物理键值的返回
 
 popstate 一个新的事件
@@ -329,6 +331,10 @@ https://www.jianshu.com/p/9c95db596df5
 
 # CSS和JS放的位置的考究
 
+首先讲一个结论，CSS的加载不会阻塞DOM解析，只会阻塞DOM渲染
+
+JS会堵塞DOM解析和渲染
+
 **css**
 
 1. css放head中, 将导致DOM的渲染过程推迟到css以及下载并解析完毕之后. 也就是说, 如果我们在head中引入一个巨长的css文件, DOM会解析但不会渲染(打开console element中会有页面相对应的标签, 但是页面本身是空白)
@@ -382,7 +388,99 @@ js
 
 # ES6 class 是怎么实现的
 
+ES5 的继承时通过 prototype 或构造函数机制来实现。
+
+- ES5 的继承实质上是<font color='red'>先创建子类的实例对象，然后再将父类的方法添加到 this 上</font>（Parent.apply(this)）。
+- ES6 的继承机制完全不同，<font color='red'>实质上是先创建父类的实例对象 this（子类没有自己的this对象所以必须先调用父类的 super()方法），然后再用子类的构造函数修改</font>
+  this。
+
+具体的：ES6 通过 class 关键字定义类，里面有构造方法，类之间通过 extends 关键字实现继承。子类必须在 constructor 方法中调用 super 方法，否则新建实例报错。因为子类没有自己的 this 对象，而是继承了父类的 this 对象，然后对其进行加工。如果不调用 super 方法，子类得不到 this 对象。
+
+ps：super 关键字指代父类的实例，即父类的 this 对象。在子类构造函数中，调用 super 后，才可使用 this 关键字，否则报错。
+
 # ES6 class 和 ES5 function 的区别
 
+### 首先class 和 function的相同点是都定义在prototype上
+
+```js
+class Point {
+  constructor() {
+    // ...
+  }
+
+  toString() {
+    // ...
+  }
+
+  toValue() {
+    // ...
+  }
+}
+
+// 等同于
+
+Point.prototype = {
+  constructor() {},
+  toString() {},
+  toValue() {},
+};
+```
+
+- 类内部的方法都是不可枚举的，ES5中的可以使用Object.keys()枚举,ES6使用Object.getOwnPropertyNames(a.prototype)
+
+### 重复定义
+
+- function会覆盖之前定义的方法
+- class会报错（本质是class开启了严格模式）
+
+### 外部添加方法
+
+都可通过实例的__proto__属性向原型添加方法
+
+推荐使用Object.getPrototypeOf()获取实例原型后再添加方法
+
+### Class没有变量提升
+
+### class定义的类没有私有方法和私有属性
+
+可以用symbol模拟
+
+```js
+const bar = Symbol('bar');
+const snaf = Symbol('snaf');
+
+export default class myClass{
+
+  // 公有方法
+  foo(baz) {
+    this[bar](baz);
+  }
+
+  // 私有方法
+  [bar](baz) {//[bar]用方括号代表从表达式获取的属性名
+    return this[snaf] = baz;
+  }
+
+  // ...
+};
+```
+
+### class内部默认开启严格模式
+
+### class静态方法和属性
+
+- class定义的静态方法前加static关键字
+- 只能通过类名调用
+- 不能通过实例调用
+- 可与实例方法重名
+- 静态方法中的this指向类而非实例
+- 静态方法可被继承
+- 在子类中可通过super方法调用父类的静态方法
+  class内部没有静态属性，只能在外面通过类名定义。
+
 # Vue中数组双向绑定的实现原理
+
+# 移动端click和pc的区别
+
+移动端click有300ms延迟，原因是iphone最初的双击zoom实现，导致大家都复制他的做法
 
