--- a/vue/3.vue3新特性.md
+++ b/vue/3.vue3新特性.md
@@ -13,3 +13,19 @@
 例如less报错报的是转换后的css 代码的哪一行
 
 # VUE更小
+
+# template可以不止是一个根div了
+
+# 支持摇树
+
+全局API语法不用的时候从中剔除
+
+要使用全局方法只可以通过ES modules方法引用来使用
+
+例如
+
+```js
+import { nextTick } from 'vue'
+```
+
+直接使用导致 undefined is not a function
