--- a/2020 前端面试题详解文档/要点.md
+++ b/2020 前端面试题详解文档/要点.md
@@ -385,7 +385,7 @@ HTTP 2.0
 
 头部压缩，双方各自维护一个header的索引表，使得不需要直接发送值，通过发送key缩减头部大小
 
-多路复用，使用多个stream，每个stream又分帧传输，使得一个tcp连接能够处理多个http请求
+多路复用，使用多个stream，每个stream又分帧传输二进制，使得一个tcp连接能够处理多个http请求
 
 可以使用服务端推送
 
