--- a/2020 前端面试题详解文档/要点3.md
+++ b/2020 前端面试题详解文档/要点3.md
@@ -484,3 +484,66 @@ export default class myClass{
 
 移动端click有300ms延迟，原因是iphone最初的双击zoom实现，导致大家都复制他的做法
 
+# 完全搞懂http格式
+
+https://www.cnblogs.com/ldq2016/p/9055933.html
+
+# join如果不填参数和填''的区别
+
+```js
+let arr = [1,2,3,4,5]
+console.log(arr.join(''));//12345
+console.log(arr.join());//1,2,3,4,5
+```
+
+# 使用CSP防止XSS攻击
+
+网页安全政策"（Content Security Policy，缩写 CSP
+
+CSP 的实质就是==白名单制度==，开发者明确告诉客户端，哪些外部资源可以加载和执行，等同于提供白名单。它的实现和执行全部由浏览器完成，开发者只需提供配置。
+
+## 两种方法开启CSP
+
+### 一种是通过 HTTP 头信息的`Content-Security-Policy`的字段
+
+```http
+Content-Security-Policy: script-src 'self'; object-src 'none';
+style-src cdn.example.org third-party.org; child-src https:
+```
+
+
+
+### 另一种是通过网页的`<meta>`标签。
+
+```html
+<meta http-equiv="Content-Security-Policy" content="script-src 'self'; object-src 'none'; style-src cdn.example.org third-party.org; child-src https:">
+```
+
+- 脚本：只信任当前域名
+- `<object>`标签：不信任任何URL，即不加载任何资源
+- 样式表：只信任`cdn.example.org`和`third-party.org`
+- 框架（frame）：必须使用HTTPS协议加载
+- 其他资源：没有限制
+
+不符合CSP的会报错
+
+## 资源加载限制
+
+- **`script-src`**：外部脚本
+- **`style-src`**：样式表
+- **`img-src`**：图像
+- **`media-src`**：媒体文件（音频和视频）
+- **`font-src`**：字体文件
+- **`object-src`**：插件（比如 Flash）
+- **`child-src`**：框架
+- **`frame-ancestors`**：嵌入的外部资源（比如<frame>、<iframe>、<embed>和<applet>）
+- **`connect-src`**：HTTP 连接（通过 XHR、WebSockets、EventSource等）
+- **`worker-src`**：`worker`脚本
+- **`manifest-src`**：manifest 文件
+
+`default-src`用来设置上面各个选项的默认值。
+
+> ```http
+> Content-Security-Policy: default-src 'self'
+> ```
+
