--- a/three.js/4.设置材质样式.md
+++ b/three.js/4.设置材质样式.md
@@ -32,6 +32,16 @@ material.transparent = true ;
 | opacity     | 透明度设置，0表示完全透明，1表示完全不透明 |
 | transparent | 是否开启透明，默认false                    |
 
+#### 高光效果
+
+```js
+var sphereMaterial=new THREE.MeshPhongMaterial({
+    color:0x0000ff,
+    specular:0x4488ee,
+    shininess:12
+});//材质对象
+```
+
 ### 材质类型
 
 threejs提供了很多常用的材质效果，这些效果本质上都是对WebGL着色器的封装，对于开发者来说直接使用就可以,这里不再做过多介绍，大家现有一个印象即可。
