--- a/react/5.jsx的语法.md
+++ b/react/5.jsx的语法.md
@@ -58,3 +58,157 @@ const element = <h2>hello World</h2>
 #### 对象类型不能作为子元素
 
 对象放到{}中时会报错 （not valid as a React child）
+
+# JSX中嵌入属性(动态绑定写法)
+
+jsx是html和js的混合
+
+因此js中一些关键词在jsx中为了防止混淆要改名
+
+例如 class - > className
+
+```jsx
+<script type="text/babel">
+  function getFullPath (imgUrl){
+    return 'http://'+imgUrl
+  }
+  class App extends React.Component {
+    constructor() {
+      super();
+      this.state = {
+        imgUrl:'img13.360buyimg.com/n1/s450x450_jfs/t1/167910/25/4258/103664/600fd55eE5e71d032/7b4591a1637b649f.jpg',
+        link:'www.baidu.com',
+        active: true
+      }
+    }
+
+    render() {
+      return (
+          <div>
+            {/*绑定普通属性*/}
+            <h2 title="xxxx">你好</h2>
+            <img src={getFullPath(this.state.imgUrl)} alt=""/>
+            <a href={this.state.link}>xxx</a>
+            {/*绑定class*/}
+            <div className="box title">我是div</div>
+            {/*动态绑定class*/}
+            <div className={"box title "+(this.state.active ? 'active': '')}>我是div</div>
+            <label htmlFor="222">xxx</label>
+            {/*绑定style*/}
+            <div style={{color:"red" ,fontSize: "50px" }}>binding style</div>
+          </div>
+      );
+    }
+  }
+
+  ReactDOM.render(<App/>,document.getElementById('app'))
+</script>
+```
+
+# 方法的绑定
+
+由于方法如onClick绑定时this的指向为undefined
+
+有三种方法解决
+
+- ```
+  每次都bind一下this,在构造函数中统一绑定
+  ```
+
+- ```
+  定义方法时把方法定义成箭头函数
+  ```
+
+- ```
+  在方法传入时直接传入一个箭头函数，方便传值，推荐
+  ```
+
+```jsx
+<div>
+  {/*1.每次都bind一下this,在构造函数中统一绑定*/}
+  <button onClick={this.getImgUrl}>方法一</button>
+  {/*2.定义方法时把方法定义成箭头函数*/}
+  <button onClick={this.getActive}>方法二</button>
+  {/*3.在方法传入时直接传入一个箭头函数，方便传值，推荐*/}
+  <button onClick={()=>{ this.getLink('我是参数') }}>方法三</button>
+</div>
+
+getImgUrl() {
+      console.log(this.state.imgUrl)
+    }
+
+    getActive = () => {
+      console.log(this.state.active)
+    }
+
+    getLink(props){
+      console.log(this.state.link,props)
+    }
+
+this.getImgUrl = this.getImgUrl.bind(this)
+```
+
+# 方法绑定参数的传递
+
+- react方法绑定时react自己调用的
+
+- function.call(undefined, event) react会默认传入一个event对象
+
+- 我们使用bind方法绑定this的时候也会拿到event
+
+  ```js
+  function.bind(this).call(undefined,event)
+  ```
+
+- 我们使用方法三传入一个箭头函数来传递参数，这时候event被传给了外层箭头函数
+
+  ```js
+  <li onClick={event => {this.movieClick(item, index,event)}}>{item}</li>
+  ```
+
+
+# jsx条件判断
+
+```jsx
+<script type="text/babel">
+  class App extends React.Component {
+    constructor() {
+      super();
+      this.state = {
+        isLogin:false
+      }
+    }
+
+    render() {
+      let welcome = ''
+      if(this.state.isLogin){
+        welcome = (<h2>欢迎</h2>)
+      }else {
+        welcome = (<h2>请先登录</h2>)
+      }
+      return (
+          <div>
+            {welcome}
+            <h2>{this.state.isLogin && 'nihao '}</h2>
+            <button onClick={ e => this.btnClick() }>222</button>
+          </div>
+      );
+    }
+    btnClick(){
+      this.setState({
+        isLogin: !this.state.isLogin
+      })
+    }
+  }
+
+
+  ReactDOM.render(<App/>, document.getElementById('app'))
+</script>
+```
+
+## 实现v-show的效果
+
+```jsx
+<h2 style={{display: (this.state.isLogin ? "block":"none")}}>v-show</h2>
+```
+
