--- a/react/5.jsx的语法.md
+++ b/react/5.jsx的语法.md
@@ -61,6 +61,8 @@ const element = <h2>hello World</h2>
 
 对象放到{}中时会报错 （not valid as a React child）
 
+### NaN可以显示但是会报警告
+
 # JSX中嵌入属性(动态绑定写法)
 
 jsx是html和js的混合
