--- a/react/8.组件化开发.md
+++ b/react/8.组件化开发.md
@@ -25,3 +25,100 @@
 - constructor是可选的，在其中初始化一些数据
 - this.state中维护的就是组件内部的数据
 - render方法是class组件中唯一必须实现的方法
+
+```js
+class App extends React.Component {
+  constructor() {
+    super();
+  }
+  render() {
+    return(<h2>hello</h2>)
+  }
+}
+
+export default App
+```
+
+
+
+# 函数式组件
+
+特点
+
+- 没有this对象
+- 没有内部的状态（hooks可以让函数式组件有内部的状态）
+
+定义方式
+
+```js
+export default function App(){
+  return (
+      <h2>我是函数式组件</h2>
+  )
+}
+
+```
+
+# render函数返回值的类型
+
+-  React元素
+
+  JSX创建的 转化为React元素
+
+- 数组或fragments：使用数组可以返回多根
+
+- Portals（端口）：渲染子节点到不同的dom子树中
+
+- 字符串或者数值类型
+
+- Boolean或者null：什么都不渲染
+
+注意~~~不能返回对象
+
+# 生命周期
+
+类组件才有生命周期函数
+
+函数组件是没有生命周期函数，通过hooks来模拟一些生命周期函数
+
+![image-20210214201503782](D:\project\notebook\react\8.组件化开发.assets\image-20210214201503782.png)
+
+- constructor ----- created
+
+- render(执行setState/new props/forceUpdate的时候会重新执行render)
+
+- componentDidMount(发送网络请求，时间监听)-----mounted
+
+- componentDidUpdate （第一次初始化不执行，setState/new props/forceUpdate执行）------ updated
+
+   三个参数 componentDidUpdate(prevProps, prevState, snapshot)
+
+
+
+- componentWillUnmount (从dom树中移除的时候调用)----- destory
+
+### 显示少的生命周期图谱
+
+![image-20210214202811866](D:\project\notebook\react\8.组件化开发.assets\image-20210214202811866.png)
+
+https://projects.wojtekmaj.pl/react-lifecycle-methods-diagram/
+
+#### SCU优化
+
+```
+shouldComponentUpdate(nextProps, nextState)
+```
+
+判断数据更新后render函数是否执行更新
+
+### getSnapshotBeforeUpdate()
+
+```
+getSnapshotBeforeUpdate(prevProps, prevState)
+```
+
+return一个对象，它使得组件能在发生更改之前从 DOM 中捕获一些信息（例如，滚动位置）
+
+### getDerivedStateFromProps()
+
+`getDerivedStateFromProps` 会在调用 render 方法之前调用，并且在初始挂载及后续更新时都会被调用。它应返回一个对象来更新 state，如果返回 `null` 则不更新任何内容。
