--- a/react/9.组件的参数传递.md
+++ b/react/9.组件的参数传递.md
@@ -126,3 +126,54 @@ class ChildCpn extends Component {
 }
 ```
 
+## 子传父
+
+也是用props
+
+父组件向子组件传递一个回调函数作为props
+
+子组件响应的时候调用props
+
+demo
+
+注意传递的函数this绑定问题 
+
+```js
+import React, {Component} from 'react';
+
+function Cpn(props){
+  const {addClick} = props
+  return (
+      <button onClick={addClick}>+1</button>
+  )
+}
+
+class App extends Component {
+  constructor(props) {
+    super(props);
+
+    this.state = {
+      counter: 0
+    }
+  }
+
+  render() {
+    return (
+        <div>
+          <h2>{this.state.counter}</h2>
+          <Cpn addClick={e=>this.add()}/>
+        </div>
+    );
+  }
+
+  add(){
+    this.setState({
+      counter:this.state.counter + 1
+    })
+  }
+}
+
+export default App;
+
+```
+
