--- a/react/11.跨组件数据传递.md
+++ b/react/11.跨组件数据传递.md
@@ -131,3 +131,46 @@ export default App;
 
 ### 多个context的嵌套使用
 
+# 事件总线
+
+```shell
+yarn add events
+```
+
+- 首先在全局初始化一个对象
+
+  ```js
+  const eventBus = new EventEmitter()
+  ```
+
+- 发送事件
+
+  ```js
+  eventBus.emit('sayHello','我是project','123','xxxx',[1231])
+  ```
+
+  
+
+- 在接受组件didMount生命周期监听
+
+  ```js
+  componentDidMount() {
+      eventBus.addListener('sayHello',this.handleSayHelloListener)
+    }
+  ```
+
+  
+
+- 在unMount生命周期关闭监听
+
+  ```js
+  componentWillUnmount() {
+      eventBus.removeListener('sayHello',this.handleSayHelloListener)
+    }
+  
+   handleSayHelloListener(message,num,...args){
+      console.log(message, num, args)
+    }
+  ```
+
+emit可以传递多个参数，使用不同的形参接收或者 ...args统一接收
