--- a/react/15.受控组件和非受控组件.md
+++ b/react/15.受控组件和非受控组件.md
@@ -61,3 +61,23 @@ export default APP;
 默认值给select绑定一个value指向state的值
 
 在平常h5中是写那个selected的
+
+### 多输入受控组件
+
+给input添加一个name
+
+更改handleChange
+
+```js
+handleChange(e){
+  this.setState({
+      [e.target.name]:this.target.value
+  })
+}
+```
+
+# 非受控组件（不推荐）
+
+使用ref获取dom来获取表单输入值
+
+不交给state来管理
