--- a/react/5.jsx的语法.md
+++ b/react/5.jsx的语法.md
@@ -95,8 +95,10 @@ jsx是html和js的混合
             <a href={this.state.link}>xxx</a>
             {/*绑定class*/}
             <div className="box title">我是div</div>
-            {/*动态绑定class*/}
+            {/*动态绑定class,注意要加空格*/}
             <div className={"box title "+(this.state.active ? 'active': '')}>我是div</div>
+             {/*动态绑定class，这里不用注意空格，用join连接*/}
+            <div className={["title",(this.state.active ? 'active':"")].join(' ')}
             <label htmlFor="222">xxx</label>
             {/*绑定style*/}
             <div style={{color:"red" ,fontSize: "50px" }}>binding style</div>
