--- a/react/23.axios.md
+++ b/react/23.axios.md
@@ -2,6 +2,10 @@
 
 demo
 
+get是 params
+
+post 是 data
+
 ```react
 import React, {PureComponent} from 'react';
 import PropTypes from 'prop-types';
@@ -35,5 +39,90 @@ App.propTypes = {};
 
 export default App;
 
+```
+
+# 多服务器场景
+
+通过axios.create()创建多个实例配置不同的baseUrl
+
+
+
+# 拦截器
+
+请求拦截
+
+```js
+instance.interceptors.request.use(config =>{
+    //正常发送
+    //进行操作
+    //1.显示loading组件
+    //2.携带token,如果没有token跳转到登录页面
+    //3.params/data的序列化操作
+    return config
+},reject => {
+    //没有正常发送
+})
+```
+
+响应拦截
+
+```js
+instance.interceptors.response.use(res =>{
+    //正常接受到结果
+    //进行操作
+    //1.res.data
+    //2.
+    //3.
+    return config
+},err => {
+    //没有正常接受到结果\
+    if(err && err.response){
+        switch(err.response.status){
+            case 400:
+                console.log('请求错误')
+                break
+            case 401:
+                console.log('未授权访问')
+                break
+            default:
+                console.log('其他错误信息')
+        }
+    }
+    return err
+})
+```
+
+# 二次封装
+
+配置文件
+
+config.js
+
+```js
+const devBase_Url = 'https://dev.com'
+const proBase_Url = 'https://pro.com'
+
+export const Base_Url = process.env.NODE_ENV === 'development' ? devBase_Url :proBase_Url
+
+export const Timeout = 5000
+```
+
+
+
+请求
+
+request.js
+
+```js
+import axios from 'axios'
+
+import{Base_Url, Timeout} from './config.js'
+
+const instance = axios.create({
+    baseURL: Base_Url,
+    timeout: Timeout
+})
+
+export default instance
 ```
 
