--- a/react/24.过渡动画.md
+++ b/react/24.过渡动画.md
@@ -13,7 +13,7 @@
 <CSSTransition>标签属性 
 
 - in 控制组件应用动画的属性值，通常将一个react的组件`state`赋值给它，通过改变`state`，从而开启和关闭动画，true enter enter active enter done  ，false exit exit active exit done
-- timeout 时间
+- timeout 时间，这里是控制类添加的时间，css中还要定义时间
 - classNames 定义状态的类名 如 card      card-appear card-enter
 - unmountOnExit={true} 默认是false 当结束播放（in为false） 的时候直接从dom中删除该元素
 - apper 设置该元素第一次加载的执行动画，要设置classNames 
@@ -107,6 +107,149 @@ class CssTransitionDemo extends PureComponent {
 CssTransitionDemo.propTypes = {};
 
 export default CssTransitionDemo;
+
+```
+
+# SwitchTransition
+
+先exit 后 enter
+
+这个的使用要包裹在CSSTransition外部
+
+这时CSSTransition 不使用in 属性
+
+使用 key 属性
+
+```react
+import React, {PureComponent} from 'react';
+import {CSSTransition, SwitchTransition} from "react-transition-group";
+import styled from 'styled-components';
+
+const CssWrapper = styled.div`
+    .btn{
+      &-enter{
+        opacity: 0;
+        transform: translateX(100%);
+        transition: all 1000ms;
+      }
+      &-enter-active{
+        transform: translateX(0);
+        opacity: 1;
+        
+      }
+      &-exit{
+        opacity: 1;
+        background-color: #bfa;
+        transform: translateX(0);
+        transition: all 1000ms;
+      }
+      &-exit-active{
+        transform: translateX(100%);
+        opacity: 0;
+      }
+    }
+`
+
+class SwitchTransitionx extends PureComponent {
+
+  constructor(props) {
+    super(props);
+
+    this.state = {
+      on: false
+    }
+  }
+
+  render() {
+    return (
+        <CssWrapper>
+          <SwitchTransition>
+            <CSSTransition key={this.state.on?'on':'off'}
+                            classNames='btn'
+                            timeout={1000}>
+              <button onClick={event => {this.setState({on:!this.state.on})
+                console.log(1111)}}>{this.state.on?'on':'off'}</button>
+            </CSSTransition>
+          </SwitchTransition>
+        </CssWrapper>
+    );
+  }
+}
+
+
+export default SwitchTransitionx;
+
+
+```
+
+# TransitionGroup
+
+包裹动画组
+
+一般用于添加列表元素的动画
+
+```react
+import React, {PureComponent} from 'react';
+import {CSSTransition,TransitionGroup} from "react-transition-group";
+import styled from 'styled-components'
+
+const CssWrapper = styled.div`
+  .card{
+    
+    &-enter{
+      transform: translateX(100%);
+      transition: all 300ms;
+      
+    }
+    &-enter-active{
+      transform: translateX(0);
+     
+    }
+    &-enter-done{
+      color: red;
+    }
+  
+  }
+`
+class TransitionGroupDemo extends PureComponent {
+
+  constructor() {
+    super();
+
+    this.state = {
+      list:['111','222']
+    }
+  }
+
+  render() {
+    return (
+        <CssWrapper>
+          <TransitionGroup>
+            {this.state.list.map((item, key)=>{
+              return(
+                  <CSSTransition key={key}
+                                timeout={300}
+                                classNames='card'>
+                    <div style={{width:'200px',textAlign:'center'}}>
+                      <span>{item}</span>
+                    </div>
+                  </CSSTransition>
+              )
+            })}
+          </TransitionGroup>
+          <button onClick={event => this.addList()}>添加</button>
+        </CssWrapper>
+    );
+  }
+  addList(){
+    this.setState({
+      list:[...this.state.list,'zhangpeng']
+    })
+  }
+}
+
+
+export default TransitionGroupDemo;
 
 ```
 
