--- a/react/25.redux.md
+++ b/react/25.redux.md
@@ -92,3 +92,335 @@ store.dispatch(action4)
 
 ```
 
+# 目录结构划分
+
+- index.js 
+
+  store创建，派发action，创建订阅
+
+  这里再react中引入时使用
+
+  ```js
+  import {createStore} from 'redux'
+  
+  const stroe = redux.createStore(reducer)
+  ```
+
+  
+
+  ```js
+  import redux from 'redux'
+  import {addAction} from "./actionCreators.js";
+  import reducer from './reducer.js'
+  
+  const store = redux.createStore(reducer)
+  
+  store.subscribe(()=>{
+    console.log(store.getState())
+  })
+  
+  store.dispatch(addAction(10))
+  store.dispatch(addAction(10))
+  store.dispatch(addAction(10))
+  
+  
+  export default store
+  
+  ```
+
+  
+
+- reducer
+
+  创建reducer
+
+  ```js
+  import {ADD_NUM} from "./constants.js";
+  
+  const defaultState = {
+    counter: 0
+  }
+  
+  function reducer(state = defaultState, action) {
+    switch (action.type) {
+      case ADD_NUM:
+        return {...state,counter: state.counter + action.num}
+      default:
+        return state
+    }
+  }
+  
+  export default reducer
+  
+  ```
+
+- actionCreators
+
+  action生成
+
+  ```js
+  import {ADD_NUM} from "./constants.js";
+  
+  export const addAction = num => ({
+    //加一个小括号,返回整一个对象
+    type:ADD_NUM,
+    num
+  })
+  
+  ```
+
+- constants
+
+  存放action type 常量
+
+  ```js
+  export const ADD_NUM = 'ADD_NUM'
+  ```
+
+# redux和react混合使用
+
+将上述的四个目录结构在src下创建
+
+在组件中使用
+
+- 引入createStore创建的 store对象
+- 引入要使用的action
+- 在componentDidMount中订阅，使用setState保证修改state后调用render函数
+- 在componentWillUnmount中取消订阅
+
+demo
+
+```react
+import React, {PureComponent} from 'react';
+import PropTypes from 'prop-types';
+import store from "./store";
+import {addAction} from "./store/actionCreators";
+
+class About extends PureComponent {
+  constructor(props) {
+    super(props);
+
+    this.state = {
+      counter: store.getState().counter
+    }
+  }
+
+
+  componentDidMount() {
+    this.unsubscribe = store.subscribe(()=>{
+      this.setState({
+        counter: store.getState().counter
+      })
+    })
+  }
+
+  componentWillUnmount() {
+    //取消订阅
+    this.unsubscribe()
+  }
+
+  render() {
+    return (
+        <div>
+          home
+          <h2>当前技术{this.state.counter}</h2>
+          <button onClick={event => this.increment()}>+1</button>
+          <button onClick={event => this.addNumber(-4)}>-4</button>
+        </div>
+    );
+  }
+  increment(){
+    store.dispatch(addAction(1))
+  }
+  addNumber(num){
+    store.dispatch(addAction(num))
+  }
+}
+
+About.propTypes = {};
+
+export default About;
+
+```
+
+
+
+# 使用connect优化
+
+## connect
+
+以上代码太过冗杂，封装一个connect 来将不需要的代码抽离
+
+connect 是一个函数，其有两个参数
+
+- mapStateToProps
+
+  将state映射为Props传入组件
+
+- mapDispatchToProps
+
+  将Dispatch映射为Props传入组件
+
+其返回值是一个HOC（高阶组件）
+
+在高阶组件中使用如下特性
+
+- 劫持生命周期完成订阅stroe和取消订阅
+
+- 增强props将交给store管理的state映射为props
+
+  将操作dispatch方法映射为props
+
+connect Demo
+
+```js
+import React, {PureComponent} from 'react';
+import {StoreContext} from "./context";
+
+// connect是一个函数，返回值是一个高阶组件（高阶组件本身也是一个函数，其返回值是一个新的组件）
+export function connect(mapStateToProps, mapDispatchToProps) {
+  return function enhanceHOC(Wrapper) {
+    class EnhanceComponent extends PureComponent {
+      constructor(props, context) {
+        super(props);
+        this.state = {
+          //因为简化组件后，使用connect函数使得最后调用的组件是增强后的
+          //保证更改后调用render
+          storeState: mapStateToProps(context.getState())
+        }
+      }
+
+      componentDidMount() {
+        //订阅，保证state更新后重新调用render 函数
+        this.unsubscribe = this.context.subscribe(() => {
+          this.setState({
+            storeState: mapStateToProps(this.context.getState())
+          })
+        })
+      }
+
+      componentWillUnmount() {
+        this.unsubscribe()
+      }
+
+      render() {
+        return (
+            <Wrapper {...this.props}
+                     {...mapStateToProps(this.context.getState())}
+                     {...mapDispatchToProps(this.context.dispatch)}/>
+        )
+      }
+
+    }
+
+    EnhanceComponent.contextType = StoreContext
+    return EnhanceComponent
+  }
+}
+
+
+```
+
+## 组件的使用
+
+将所有交给store处理的state转成props
+
+dispatch方法也是
+
+导出connect高阶组件处理后的组件
+
+```react
+import React, {PureComponent} from 'react';
+import PropTypes from 'prop-types';
+import store from "./store";
+import {addAction} from "./store/actionCreators";
+import {connect} from "./utils/connect";
+
+class About extends PureComponent {
+  render() {
+    return (
+        <div>
+          About
+          <h2>当前技术{this.props.counter}</h2>
+          <button onClick={event => this.props.increment()}>+1</button>
+          <button onClick={event => this.props.addNumber(-4)}>-4</button>
+        </div>
+    );
+  }
+
+}
+
+const mapStateToProps = state =>({
+  counter:state.counter
+})
+
+const mapDispatchToProps = dispatch => ({
+  increment(){
+    dispatch(addAction(1))
+  },
+  addNumber(num){
+    dispatch(addAction(num))
+  }
+})
+
+export default connect(mapStateToProps,mapDispatchToProps)(About);
+
+```
+
+## StoreContext解除store依赖
+
+```js
+import React from "react";
+
+const StoreContext = React.createContext()
+
+export {
+  StoreContext
+}
+
+```
+
+在最外层APP组件中包裹该context
+
+暴露出store
+
+```react
+import ReactDOM from 'react-dom'
+import React from 'react'
+import App from "./redux/App"
+import 'antd/dist/antd.less'
+import {StoreContext} from "./redux/utils/context";
+
+import store from "./redux/store";
+
+ReactDOM.render(
+    <StoreContext.Provider value={store}>
+      <App/>
+    </StoreContext.Provider>
+    ,document.getElementById('root'))
+
+```
+
+# react-redux
+
+以上connect和context都可以用该库
+
+只需要修改最外层引入
+
+```js
+import ReactDOM from 'react-dom'
+import React from 'react'
+import App from "./redux/App"
+import 'antd/dist/antd.less'
+import {StoreContext} from "./redux/utils/context";
+import {Provider} from 'react-redux'
+import store from "./redux/store";
+
+ReactDOM.render(
+    <Provider store={store}>
+      <App/>
+    </Provider>
+    ,document.getElementById('root'))
+
+```
+
