--- a/react/25.redux.md
+++ b/react/25.redux.md
@@ -424,3 +424,106 @@ ReactDOM.render(
 
 ```
 
+# 中间件（middleware）
+
+![image-20210303193355056](D:\project\notebook\react\25.redux.assets\image-20210303193355056.png)
+
+中间件就是在dispatch action和最终到达reducer之间扩展一些自己的代码
+
+比如日志记录，调用异步接口，添加代码调试工具等等
+
+## 异步操作redux-thunk
+
+这个库做的事情非常简单
+
+我们知道 action 是一个对象，dispatch时必须传入一个对象
+
+我们之前的写法是传入一个函数的调用，其返回值还是一个对象
+
+redux-thunk 的作用就是让dispatch可以传入一个函数，我们在函数中进行异步操作
+
+- 首先安装 redux-thunk 库
+
+- actionCreators
+
+  ```js
+  //redux-thunk中定义的action函数,注意这里的参数dispatch
+  export const getHomeMultiDateAction = dispatch => {
+    console.log('action ')
+    axios({
+      url:'http://123.207.32.32:8000/home/multidata',
+      timeout:200
+    }).then(res=>{
+      //这里调用普通action通知reducer修改store里面的值
+      dispatch(changeBannersAction(res.data.data.banner.list))
+    })
+  }
+  ```
+
+  
+
+- 组件中
+
+  ```js
+  componentDidMount() {
+      this.props.getHomeMultiData()
+    }
+  
+  
+  const mapDispatchToProps = dispatch => ({
+    increment(){
+      dispatch(addAction(1))
+    },
+    addNumber(num){
+      dispatch(addAction(num))
+    },
+    getHomeMultiData(){
+      //注意这里dispatch传入的是redux-thunk特殊的action，是一个函数，上面的是函数的调用
+      dispatch(getHomeMultiDateAction)
+    }
+  })
+  ```
+
+- index.js
+
+  store创建时也是有区别的
+
+  ```js
+  import {createStore ,applyMiddleware} from 'redux'
+  import thunkMiddleware from "redux-thunk";
+  
+  import reducer from './reducer.js'
+  
+  //应用一些中间件
+  const storeEnhancer = applyMiddleware(thunkMiddleware)
+  
+  const store = createStore(reducer, storeEnhancer)
+  
+  
+  
+  export default store
+  
+  ```
+
+## chrome调试工具
+
+```js
+import {createStore ,applyMiddleware,compose} from 'redux'
+import thunkMiddleware from "redux-thunk";
+
+import reducer from './reducer.js'
+
+//合并中间件增强和devTools
+const composeEnhancers = window.__REDUX_DEVTOOLS_EXTENSION_COMPOSE__({trace:true}) || compose
+
+//应用一些中间件
+const storeEnhancer = applyMiddleware(thunkMiddleware)
+
+const store = createStore(reducer, composeEnhancers(storeEnhancer))
+
+
+
+export default store
+
+```
+
