--- a/react/25.redux.md
+++ b/react/25.redux.md
@@ -1,4 +1,4 @@
-# js的纯函数
+#  js的纯函数
 
 - 确定输入产生确定输出
 - 调用过程中不能产生副作用
@@ -525,5 +525,29 @@ const store = createStore(reducer, composeEnhancers(storeEnhancer))
 
 export default store
 
+```
+
+# reducer拆分
+
+将reducer拆分成多个，每一个创建自己的init值
+
+然后最外层到处reducer的默认值是空对象
+
+```js
+function reducer (state = {}, action){
+    return {
+        counterInfo:counterReducer(state.counterInfo, action)
+        homeInfo:homeReducer(state.homeInfo, action)
+    }
+}
+```
+
+我们经常使用的是redux自带的合并函数
+
+```js
+const reducer = combineReducers({
+    counterInfo:counterReducer,
+    homeInfo:homeReducer
+})
 ```
 
