--- a/react/26.路由.md
+++ b/react/26.路由.md
@@ -91,3 +91,147 @@ export default App;
 
 ```
 
+## NavLink 活跃样式
+
+```react
+<NavLink exact to='/' activeStyle={{color:'red', fontSize:'30px'}} activeClassName='link-active'>首页</NavLink>
+```
+
+使用已有属性activeStyle
+
+原理是默认加了一个active 的class属性
+
+通过activeClassName来自定义该属性
+
+## Switch组件的使用
+
+因为Route会依次匹配，当不写path的时候就会产生都匹配的状态
+
+使用Switch包裹，使得Route产生排他操作，匹配一个后不会再次匹配(按顺序)
+
+```react
+ <Switch>
+              <Route exact path='/home' component={Home}/>
+              <Route exact path='/about' component={About}/>
+              <Route component={NoMatch}/>
+            </Switch>
+```
+
+## Redirect 重定向
+
+会to到一个已经定义好Route的地方，否则就进入无匹配页面
+
+```react
+  render() {
+    return (
+        <div>
+          {
+            this.state.isLogin?(
+                <div>
+                  登录成功，用户`111
+                </div>
+            ):<Redirect to='/login'/>
+          }
+        </div>
+    );
+  }
+```
+
+## 路由嵌套
+
+在二级路由下面接着再写一套，这次外层不用包裹BrowserRouter
+
+```react
+class About extends PureComponent {
+  render() {
+    return (
+        <div>
+          <h2>About</h2>
+          <Link to='/about/history'>历史</Link>
+          <Link to='/about/culture'>文化</Link>
+          <button onClick={event => this.jumpTO()}>跳转到</button>
+
+          <Switch>
+            <Route exact path='/about' component={History}/>
+            <Route exact path='/about/history' component={History}/>
+            <Route exact path='/about/culture' component={Culture}/>
+            <Route exact path='/about/jump' component={Jump}/>
+          </Switch>
+        </div>
+    );
+  }
+```
+
+## 手动跳转
+
+使用props下路由给导入的
+
+history对象的push 方法
+
+```js
+  jumpTO(){
+    console.log(this.props.history)
+    console.log(this.props.location)
+    console.log(this.props.match)
+    this.props.history.push('/about/jump')
+  }
+```
+
+注意这个history只有在组件被路由渲染出来才会被赋予的属性的
+
+最外层是没有这个属性的
+
+如果要在最外层使用该属性
+
+需要使用高阶组件withRouter
+
+```react
+import {
+    Link,
+    BrowserRouter,
+    Route,
+    withRouter,
+    Switch
+} from "react-router-dom";
+
+export default withRouter(App);
+
+
+//使用的时候要包裹在BrowserRouter内侧
+
+      <BrowserRouter>
+        <App/>
+      </BrowserRouter>
+```
+
+## 参数传递
+
+### 动态路由参数传递
+
+首先设置
+
+在Route标签中/:动态路由名称
+
+取值
+
+this.props.match.params.设置的动态路由名称s
+
+```react
+//const username = 'aaa'
+
+<Link to={`/user/${username}`}>用户</Link>
+
+<Route  path='/user/:username' component={User}/>
+
+//取值
+ <div>
+          {
+            this.state.isLogin?(
+                <div>
+                  登录成功，用户{this.props.match.params.username}
+                </div>
+            ):<Redirect to='/login'/>
+          }
+        </div>
+```
+
